2.2.1       16.12.2010        HR
================================
 - Bugfix ScopedAttributes
 - Bugfix Tip Javascript
 - Bugfix RoleDescriptor
   Ack to Chad la Joie
 - BoneCP Connection Pooling
   Ack to Adam Lantos
 - Maven enhancements
 - JSON.simple 1.1
 - Transfer back plugin errors to IdP
 - Refactor of blacklist/sort attribute
   Do not show attribute release if attributes are empty
 - Manual updated

2.2         24.09.2010        HR
================================
 - ScopedAttribute values are displayed
   as value@scope
 - Adaption of new redirect mechanism of IdP 2.2.0
 - Attribute In Attribute Requester's Metadata Plugin
   Contributed by Scott Cantor

2.1.4       12.08.2010        HR
================================
 - Support SP Names and Descriptions
 - Cleanup documentation
   (Ack to Vladimir Mencl)
 - Cleanup dependencies
 - Webapp install script
 - Fixed LoginContext bug
   (Ack to Janusz Ulanowski)
 - Fixed bug show attributes after terms,
   although not necessary.

2.1.3       24.09.2009        HR
================================
 - Using HTTPHelper classes from
   Shibboleth to deal with the LoginContext
 - crypt-1.5 replaced by vt-crypt-2.0 

2.1.1/2.1.2 17.02.2009        HR
================================
 - Some bugfixes

2.1         03.09.2008        HR
================================
 - Major change on ArpFilter design
   RemoteUser based authentication is
   not more required. Special acknowledgment to
   Adam Lantos from niif.hu for the idea and patch and
   Chad La Joie for best IdP internals support.
 - Support for isPassive mode
 - Undocumented feature to run ArpViewer only on
   specified AuthnContextClassReferences for testing
   and demonstrating purposes.
 - Documentation adjustments

2.0.2       06.06.2008        HR
================================
 - Populating IdP RequestContext right
 - Trim configuration values
 - Do not show empty attributes
   Nullpointer Bug
 - No error, when reseting non existent user.
   Do redirect.